# conan-center-index

./: .ecrc  .editorconfig  .gitattributes  .gitattributes-merge  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Jenkinsfile  README.md  build.py  conan_profile  conanfile.py  conanlint.yml  configure.sh  dlproject.yaml  entos-packages.py  entos-packages.yml  kek.txt  mdsnippets.json  mkenv.py  package-lock.json  pylintrc  releases.md  renovate.json  requirements.in  requirements.txt  runlint.py  setup_git_remote.sh  tox.ini
.c3i/: Jenkinsfile  authorized_users.yml  c3i.yml  c3i_v2_ruben.yml  conan_v2_ready_references.yml  config_v1.yml  config_v2.yml  reviewers.yml  v1.jenkins  v2.jenkins  waitlist_users.yml
.githooks/: pre-commit
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  recipe_linter.json  runlint.py  settings.yml  stale.yml  yaml_linter.json
.github/ISSUE_TEMPLATE/: center_conan_io.md  center_conan_io.yml  package_bug.md  package_bug.yml  package_request.md  package_request.yml  package_upstream_update.md  package_upstream_update.yml  question.md  question.yml  service.md  service.yml
.github/workflows/: alert-community.yml  alter-community.yml  axtls-1.5.3.yml  b2.yml  boost.yml  build.yml  build_and_upload.yml  build_folder.yml  build_single_ref.yml  bzip2-1.0.6.yml  bzip2-1.0.8.yml  c-ares.yml  cleanup.yml  cmaes-test-conan1.yml  conflicts.yml  double-conversion.yml  etcd-grpc.yml  expat.yml  export.yml  ffmpeg-3.3.1.yml  ffmpeg-win32-3.3.1.yml  fix-pr-title.yml  fontconfig.yml  freetype.yml  glib.yml  gperf.yml  grpc-1.20.0.yml  grpc-1.26.0.yml  hide_bot_comments.yml  hooks-warnings.yml  icu.yml  intel-media-sdk.yml  jansson.yml  jasper.yml  jbig.yml  jsoncpp.yml  label_conflicts.yml  libalsa.yml  libcurl.yml  libdrm-2.4.100.yml  (+69 more)
.jenkins/: Dockerfile  Jenkinsfile
builder/: build.py  conan_tools.py  environment.py
dl-docs/: auto-merge-conflict-resolution.md  automatic-tool-builds.md  jenkins-jobs.md  merge-staging-to-production.md  merge-upstream.md  troubleshooting.md  updating-a-recipe.md  using-the-ccci-repositories.md
docs/: CONTRIBUTOR_LICENSE_AGREEMENT.md  README.md  bump_version.md  changelog.md  code_of_conduct.md  community_resources.md  conandata_yml_format.md  consuming_recipes.md  contributing.md  developing_recipes_locally.md  error_knowledge_base.md  faqs.md  how_to_add_packages.md  labels.md  linters.md  packaging_policy.md  policy_patching.md  preparing_recipes_for_conan2.md  releases.md  review_process.md  reviewing.md  supported_platforms_and_configurations.md  this_will_be_a_conflict.md  v2_linter.md  v2_migration.md  v2_roadmap.md
docs/adding_packages/: README.md  build_and_package.md  conandata_yml_format.md  conanfile_attributes.md  dependencies.md  dependencies_and_requirements.md  folders_and_files.md  how_to_add_packages.md  packaging_policy.md  reviewing.md  sources_and_patches.md  test_packages.md
docs/faq/: why_not_x86.md
docs/package_templates/: README.md
jeaiii-itoa/all/: conanfile.py
libsigcpp/3.x.x/: conanfile.py
linter/: .pylintrc  check_cmake_layout.py  check_import_conanfile.py  check_import_errors.py  check_import_tools.py  check_layout_src_folder.py  check_no_test_package_name.py  check_package_name.py  check_version_attribute.py  conandata_yaml_linter.py  conanfile_transform.py  conanv2_test_transition.py  conanv2_transition.py  config_yaml_linter.py  config_yaml_schema.yml  pre_commit_linting.py  pylintrc_recipe  pylintrc_testpackage  recipe_linter.json  requirements.txt  transform_conanfile.py  transform_import_tools.py  transform_imports.py  yamale_linter.py  yaml_linter.json  yaml_linting.py  yamllint_matcher.json  yamllint_rules.yml
linter/schemas/: conandata_schema.yml  config_schema.yml
p/: p-linux
patches/: noifc.patch
profiles/: bootstrap-cmake-tool  cmake-path  cmake-tool
qt_test_project/: CMakeLists.txt  build.sh  conanfile.py  launch.sh
qt_test_project/src/: CMakeLists.txt
qt_test_project/src/app/: CMakeLists.txt
qt_test_project/src/app/res/data/: 01-point.json  02-linestring.json  03-multipoint.json  04-polygon.json  05-multilinestring.json  06-multipolygon.json  07-geometrycollection.json  08-feature.json  09-featurecollection.json  10-countries.json  10-countries_LICENSE  11-full.json
qt_test_project/src/app/res/qml/: GeoJsonDelegate.qml  main.qml
qt_test_project/src/app/res/qml/mapitems/: CircleItem.qml  PolygonItem.qml  PolylineItem.qml  RectangleItem.qml
qt_test_project/src/app/src/: main.cpp
qt_test_project/src/libs/: CMakeLists.txt
qt_test_project/src/libs/include/my_lib/: my_lib.hpp
qt_test_project/src/libs/src/: my_lib.cpp
recipes/3fd/: config.yml
recipes/7bitconf/: config.yml
recipes/7bitdi/: config.yml
recipes/7zip/: config.yml
recipes/CopperSpice/: config.yml
recipes/DS_S3_Uploader/: config.yml
recipes/Gliese/: config.yml
recipes/OpenFst/: conandata.yml  conanfile.py
recipes/aaf/: config.yml
recipes/aaplus/: config.yml
recipes/abseil/: config.yml  forked-from.txt
recipes/absent/: config.yml
recipes/acado/: config.yml
recipes/accellera-uvm-systemc/: config.yml
recipes/access_private/: config.yml
recipes/acl/: config.yml
recipes/activemq-cpp/: config.yml
tasks/: __init__.py  merging.py
tests/: conftest.py  test_tools.py
(+24873 files in other folders)
